--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#">Work <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Skills</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Contact Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="#">CV</a>
                 </li>
             </li>
         </ul>
@@ -68,13 +68,19 @@
     </nav>
 
     <!-- Hero Jumbotron -->
+    <div class="box-padding-md grey-bg">
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Fluid jumbotron</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-
+            <div class="media p-3">
+                <img src= "images/IMG_0805.JPG" alt="Picture of Lili" class="mr-1 mt-1 rounded-circle" style="width:100px;">
+                <div class="media-body">
+                    <h3 class="display-5">Lili Begum</h3>
+                    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
         </div>
     </div>
+
+
 
     <!-- Work Section -->
     <div class="container-fluid">
