experiimenting with nested columns

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
 
         <!-- Section Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Work <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#work">Work <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Me</a>
+                    <a class="nav-link" href="#contact">Contact Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CV</a>
+                    <a class="nav-link" href="#cv">CV</a>
                 </li>
             </li>
         </ul>
@@ -68,68 +68,121 @@
     </nav>
 
     <!-- Hero Jumbotron -->
-    <div class="box-padding-md grey-bg">
+    <!-- <div class="box-padding-md grey-bg"> -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <div class="media p-3">
-                <img src= "images/IMG_0805.JPG" alt="Picture of Lili" class="mr-1 mt-1 rounded-circle" style="width:100px;">
-                <div class="media-body">
+            <!-- <div class="media p-3">
+                <img src= "images/IMG_0805.JPG" alt="Picture of Lili" class="mr-3 mt-7 rounded-circle" style="width:100px;"> -->
+                <!-- <div class="media-body">
                     <h3 class="display-5">Lili Begum</h3>
                     <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div> -->
+        <div class="row">
+            <div class="media p-3">
+                <img src= "../Bootstrap-Portfolio/images/Lili.JPG" alt="Picture of Lili" class="mr-3 mt-7" style="width:250px;
+            <div class= "col-sm-6 btn-holder">
+            </div>
+            <div class="col-sm-6">
+                <h1>Lili Begum</h1>
+                <p>George, help me, please. That was the day I invented time travel. I remember it vividly. I was standing on the edge of my toilet hanging a clock, the porces was wet, I slipped, hit my head on the edge of the sink. And when I came to I had a revelation, a picture, a picture in my head, a picture of this. This is what makes time travel possible. The flux capacitor. Lorraine. I had a horrible nightmare, dreamed I went back in time, it was terrible. George, there's nothing to be scared of. All it takes is a little self confidence. You know, if you put your mind to it, you could accomplish anything.
+                </p>
+                <br />
             </div>
         </div>
-    </div>
+      </div>
+     </div>
+
 
 
 
     <!-- Work Section -->
-    <div class="container-fluid">
+<section>
+    <div class="container">
         <div class="row">
-          <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="bg bg-success">
+                    Work
                 </div>
-              </div>
-      </div>
-      <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+            </div>
+            <div class="col-xs-2 col-sm-6 col-md-3 
+                    col-lg-4 col-xl-6">
+                <div class="bg bg-danger">
+                    second Column
+                          <div class="cardContainer col-lg-3 col-md-3 col-sm-12>
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                    <div class="row">
+                        <div class="col-md-3 col-lg-4 col-xl-6">
+                            <div class="bg bg-success">
+                                First Nested Column
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-lg-4 col-xl-6">
+                            <div class="bg bg-primary">
+                                Second Nested Column
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <section>
+      <div class="cardContainer col-lg-3 col-md-3 col-sm-12>
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Work</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
     </div>
-    <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </div>
-    <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </div>
+    </section>
+
     <!-- Skills Section -->
+    <section>
+        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
+          <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+      </div>
+  </section>
 
     <!-- About / Contact Section -->
+    <section>
+        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
+          <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+      </div>
+  </section>
 
     <!-- Footer Section -->
+    <section>
+        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
+          <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+      </div>
+  </section>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
