Updated work section with nested columns

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lili | Bootstrap Portfolio</title>
-
     <!-- CSS Bootstrap (4) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#cv">CV</a>
                 </li>
-            </li>
-        </ul>
-                <!-- Temp removed section to review without dropdown -->
-                <!--<li class="nav-item dropdown">
+                </li>
+            </ul>
+            <!-- Temp removed section to review without dropdown -->
+            <!--<li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Dropdown
@@ -73,121 +73,148 @@
         <div class="container">
             <!-- <div class="media p-3">
                 <img src= "images/IMG_0805.JPG" alt="Picture of Lili" class="mr-3 mt-7 rounded-circle" style="width:100px;"> -->
-                <!-- <div class="media-body">
+            <!-- <div class="media-body">
                     <h3 class="display-5">Lili Begum</h3>
                     <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
             </div> -->
-        <div class="row">
-            <div class="media p-3">
-                <img src= "../Bootstrap-Portfolio/images/Lili.JPG" alt="Picture of Lili" class="mr-3 mt-7" style="width:250px;
-            <div class= "col-sm-6 btn-holder">
-            </div>
-            <div class="col-sm-6">
-                <h1>Lili Begum</h1>
-                <p>George, help me, please. That was the day I invented time travel. I remember it vividly. I was standing on the edge of my toilet hanging a clock, the porces was wet, I slipped, hit my head on the edge of the sink. And when I came to I had a revelation, a picture, a picture in my head, a picture of this. This is what makes time travel possible. The flux capacitor. Lorraine. I had a horrible nightmare, dreamed I went back in time, it was terrible. George, there's nothing to be scared of. All it takes is a little self confidence. You know, if you put your mind to it, you could accomplish anything.
-                </p>
-                <br />
-            </div>
-        </div>
-      </div>
-     </div>
-
-
-
-
-    <!-- Work Section -->
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-3">
-                <div class="bg bg-success">
-                    Work
+            <div class="row">
+                <div class="media p-3">
+                    <img src="../Bootstrap-Portfolio/images/Lili.JPG" alt="Picture of Lili" class="mr-3 mt-7"
+                        style="width:250px;" />
+                </div>
+                <div class="col-sm-6">
+                    <h1>Lili Begum</h1>
+                    <p>George, help me, please. That was the day I invented time travel. I remember it vividly. I was
+                        standing on the edge of my toilet hanging a clock, the porces was wet, I slipped, hit my head on
+                        the edge of the sink. And when I came to I had a revelation, a picture, a picture in my head, a
+                        picture of this. This is what makes time travel possible. The flux capacitor. Lorraine. I had a
+                        horrible nightmare, dreamed I went back in time, it was terrible. George, there's nothing to be
+                        scared of. All it takes is a little self confidence. You know, if you put your mind to it, you
+                        could accomplish anything.
+                    </p>
+                    <br />
                 </div>
             </div>
-            <div class="col-xs-2 col-sm-6 col-md-3 
-                    col-lg-4 col-xl-6">
-                <div class="bg bg-danger">
-                    second Column
-                          <div class="cardContainer col-lg-3 col-md-3 col-sm-12>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+        </div>
+    </div>
+
+    <!-- Work Section -->
+    <section>
+        <div class="container">
+            <div class="row border border-success">
+                <div class="border border-info col-12 col-md-3">
+                    <div class="bg bg-success text-right title-work">
+                        Work
+                    </div>
+                </div>
+                <div class="border border-dark col-12 col-md-9">
                     <div class="row">
-                        <div class="col-md-3 col-lg-4 col-xl-6">
-                            <div class="bg bg-success">
-                                First Nested Column
+                        <div class="card">
+                            <img class="card-img-top" src="http://placekitten.com/g/200/180" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-lg-4 col-xl-6">
-                            <div class="bg bg-primary">
-                                Second Nested Column
+                        <div class="card col-md-6">
+                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card col-md-6">
+                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card col-md-6">
+                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card col-md-6">
+                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-    <section>
-      <div class="cardContainer col-lg-3 col-md-3 col-sm-12>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Work</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-    </div>
     </section>
 
     <!-- Skills Section -->
     <section>
         <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Skills</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-      </div>
-  </section>
+        </div>
+    </section>
 
     <!-- About / Contact Section -->
     <section>
         <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">About</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div>
-      </div>
-  </section>
+        </div>
+    </section>
 
     <!-- Footer Section -->
-    <section>
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
-          <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+    <footer class="border border-dark" style="height: 10em;">
+        <div class="row">
+            <div class="col-12 col-md-6 border">
+                This is your first column, which will be full width
+                until md breakpoint
             </div>
-      </div>
-  </section>
+            <div class="col-12 col-md-6 border">
+                This is your second column, which will be full width
+                until md breakpoint
+                <a href="http://space.com" target="_blank">This is a link</a>
+            </div>
+            
+        </div>
+    </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
