Tidied up skills and about section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <!-- CSS Bootstrap (4) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <!-- Getting rid of header 
-        <h1>Hello</h1> -->
-
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Lili Begum</a>
@@ -68,7 +65,6 @@
     </nav>
 
     <!-- Hero Jumbotron -->
-    <!-- <div class="box-padding-md grey-bg"> -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <!-- <div class="media p-3">
@@ -101,54 +97,59 @@
     <!-- Work Section -->
     <section>
         <div class="container">
-            <div class="row border border-success">
+            <div class="row">
                 <div class="border border-info col-12 col-md-3">
-                    <div class="bg bg-success text-right title-work">
+                    <div class="text-right title-work">
                         Work
                     </div>
                 </div>
                 <div class="border border-dark col-12 col-md-9">
                     <div class="row">
                         <div class="card">
-                            <img class="card-img-top" src="http://placekitten.com/g/200/180" alt="Card image cap">
+                            <img class="card-img-top" src="https://picsum.photos/seed/sea/300/180"
+                                alt="This picture will represent my main project">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Main Project</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                         <div class="card col-md-6">
-                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://picsum.photos/seed/car/150/180"
+                                alt="This picture will represent project 2">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Project 2</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                         <div class="card col-md-6">
-                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://picsum.photos/seed/dog/150/180"
+                                alt="This picture will represent project 3">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Project 3</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                         <div class="card col-md-6">
-                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://picsum.photos/seed/cat/150/180"
+                                alt="This picture will represent project 4">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Project 4</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                         <div class="card col-md-6">
-                            <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
+                            <img class="card-img-top" src="https://picsum.photos/seed/art/150/180"
+                                alt="This picture will represent project 5">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Project 5</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -156,18 +157,33 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </section>
 
     <!-- Skills Section -->
     <section>
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Skills</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="container">
+            <div class="row">
+                <div class="border border-info col-12 col-md-3">
+                    <div class="text-right title-skills">
+                        Skills
+                    </div>
+                </div>
+                <div class="border border-dark col-12 col-md-9">
+                    <div class="row">
+                        <div class="card">
+                            <img class="card-img-top" src="https://picsum.photos/seed/piano/200/100"
+                                alt="This picture will represent my main project">
+                            <div class="card-body">
+                                <h5 class="card-title">Skills</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -175,17 +191,36 @@
 
     <!-- About / Contact Section -->
     <section>
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-12-push-3">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="http://placekitten.com/g/200/300" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">About</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="container">
+            <div class="row">
+                <div class="border border-info col-12 col-md-3">
+                    <div class="text-right title-about">
+                        About / Contact
+                    </div>
                 </div>
-            </div>
-        </div>
+                <div class="border border-dark col-12 col-md-9">
+                    <div class="row">
+                        <div class="card col-md-6">
+
+                            <div class="card-body">
+                                <h5 class="card-title">About</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the
+                                    card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card col-md-6">
+                            <div class="card-body">
+                                <h5 class="card-title">Contact</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the
+                                    card's content.
+                                </p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
     </section>
 
     <!-- Footer Section -->
@@ -200,7 +235,7 @@
                 until md breakpoint
                 <a href="http://space.com" target="_blank">This is a link</a>
             </div>
-            
+
         </div>
     </footer>
 
