updated skills setion, removed unecessary images and buttons

--- a/index.html
+++ b/index.html
@@ -171,16 +171,29 @@
                     </div>
                 </div>
                 <div class="border border-dark col-12 col-md-9">
-                    <div class="row">
+                    <!-- <div class="row"> -->
                         <div class="card">
-                            <img class="card-img-top" src="https://picsum.photos/seed/piano/200/100"
-                                alt="This picture will represent my main project">
+                            <!-- <img class="card-img-top" src="https://picsum.photos/seed/piano/200/100"
+                                alt="This picture will represent my skills"> -->
                             <div class="card-body">
-                                <h5 class="card-title">Skills</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.
+                                <!-- <h5 class="card-title">Skills</h5> -->
+                                <!-- List out the skills you expect to learn from the bootcamp. -->
+                                <p class="card-text">In this bootcamp, I expect to gain skills in:
+                                    <ul>
+                                        <li>HTML / CSS / Git</li>
+                                        <li>UX Design</li>
+                                        <li>JavaScript</li>
+                                        <li>Bootstrap</li>
+                                        <li>APIs</li>
+                                        <li>The Document Object Model</li>
+                                        <li>JQuery</li>
+                                        <li>JSON</li>
+                                        <li>AJAX</li>
+                                        <li>Node.js</li>
+
+                                    </ul>
                                 </p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                         </div>
                     </div>
@@ -221,6 +234,10 @@
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer Section -->
@@ -235,7 +252,6 @@
                 until md breakpoint
                 <a href="http://space.com" target="_blank">This is a link</a>
             </div>
-
         </div>
     </footer>
 
